banners top alignment changes center fixing

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -2615,7 +2615,7 @@ input {
     overflow-y: scroll;
     height: 180px;
     @media screen and (max-width: 1440px) {
-      padding: .5rem;
+      padding: 1rem;
     }
     @media screen and (max-width: 1024px) {
       height: 150px;
