--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1047,13 +1047,13 @@ body {
     filter: invert(1);
 
     @media (max-width: 1600px) {
-      width: 24px;
-      height: 24px;
+      width: 20px;
+      height: 20px;
     }
 
     @media (max-width: 1199px) {
-      width: 20px;
-      height: 20px;
+      width: 18px;
+      height: 18px;
     }
   }
 
